<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_onboarding_four"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="150dp"
            android:contentDescription="@string/ob_four_image_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ob_four" />

        <TextView
            android:id="@+id/tv_heading_onboarding_four"
            style="@style/Movup.OnBoarding.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/rent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_onboarding_four" />

        <TextView
            android:id="@+id/tv_description_onboarding_four"
            style="@style/Movup.OnBoarding.Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:text="@string/rent_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_heading_onboarding_four" />

        <Button
            android:id="@+id/btn_ob_four_next"
            style="@style/Movup.OnBoarding.ButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="130dp"
            android:text="@string/next_btn"
            android:textColor="#ECEFF1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
