<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_username"
            style="@style/Movup.Text.Heading.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="35dp"
            android:text="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_username"
            style="@style/Movup.Component.Form.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:ems="10"
            android:hint="@string/username_placeholder"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_full_name"
            style="@style/Movup.Text.Heading.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:text="Full Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />

        <EditText
            android:id="@+id/et_full_name"
            style="@style/Movup.Component.Form.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="full name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_full_name" />

        <TextView
            android:id="@+id/tv_email"
            style="@style/Movup.Text.Heading.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:text="Email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_full_name" />

        <EditText
            android:id="@+id/et_email"
            style="@style/Movup.Component.Form.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <TextView
            android:id="@+id/tv_password"
            style="@style/Movup.Text.Heading.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:text="Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <EditText
            android:id="@+id/et_password"
            style="@style/Movup.Component.Form.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <TextView
            android:id="@+id/tv_confirm_password"
            style="@style/Movup.Text.Heading.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:text="Confirm Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/Movup.Component.Form.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="confirm password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_confirm_password" />

        <TextView
            android:id="@+id/tv_gender"
            style="@style/Movup.Text.Heading.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:text="Gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_confirm_password" />

        <Spinner
            android:id="@+id/spnr_gender"
            style="@style/Movup.Component.Form.Spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:contentDescription="@string/select_gender"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_gender" />

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/Movup.Component.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="130dp"
            android:text="Sign Up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
